# zcvcreate

./: pubspec.yaml
.github/workflows/: build-android.yml  build-linux.yml  build-mac.yml  build-win.yml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/zcvcreate/: MainActivity.kt
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/src/rust/: frb_generated.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/packaging/: zcvcreate.appdata.xml
linux/packaging/deb/: make_config.yaml
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
misc/: app.json
rust/: Cargo.toml
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/ios/: rust_lib_zcvcreate.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_zcvcreate.podspec
rust_builder/windows/: CMakeLists.txt
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/packaging/exe/: make_config.yaml
windows/runner/: Runner.rc  main.cpp
